# AAI-project

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  proposal.md  pyproject.toml
benchmarks/: __init__.py  agentdojo_adapter.py  agentdojo_selection.json  checkers.py  schema.py
benchmarks/cases/: custom_cases.json
configs/: ablations.json  sandbox_profiles.json
src/traceguard/: __init__.py  __main__.py  agent.py  cli.py  experiments.py  metrics.py  runtime.py  types.py
src/traceguard/data/policy/: default.json
src/traceguard/data/prompts/: base_system.txt  defensive_system.txt  supervisor.txt
src/traceguard/policy/: __init__.py  engine.py
src/traceguard/sandbox/: __init__.py  config.py  runner.py
src/traceguard/supervisor/: __init__.py  base.py  heuristic.py  structured.py
src/traceguard/tools/: __init__.py  registry.py
tests/: test_benchmarks.py  test_metrics.py  test_runtime.py  test_types.py
tests/policy/: test_policy.py
tests/sandbox/: test_docker_canaries.py  test_sandbox.py
tests/supervisor/: test_supervisor.py
tests/tools/: test_tools.py
