[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "traceguard"
version = "0.1.0"
description = "Research runtime for supervising tool-using LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]
agentdojo = ["agentdojo==0.1.35"]

[project.scripts]
traceguard = "traceguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/traceguard"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
